...
      return;
    }
    setPage(page + 1);
    fetchAccountStatuses();
  };
  return (
    <View style={styles.container} testID='accountStatusScreen'>
      <FlatList
        contentContainerStyle={styles.listContent}
        data={accountStatusList}
        renderItem={renderRow}
        keyExtractor={keyExtractor}
        initialNumToRender={oneScreensWorth}
...
