...
        onPress={() => navigation.navigate('MessageContent')}
        testID='messageContentEntityScreenButton'
      />
      <RoundedButton text='HanhChinhVN' onPress={() => navigation.navigate('HanhChinhVN')} testID='hanhChinhVNEntityScreenButton' />
      <RoundedButton text='MasterUser' onPress={() => navigation.navigate('MasterUser')} testID='masterUserEntityScreenButton' />
      <RoundedButton text='UserProfile' onPress={() => navigation.navigate('UserProfile')} testID='userProfileEntityScreenButton' />
      <RoundedButton text='AccountStatus' onPress={() => navigation.navigate('AccountStatus')} testID='accountStatusEntityScreenButton' />
      <RoundedButton text='DeviceStatus' onPress={() => navigation.navigate('DeviceStatus')} testID='deviceStatusEntityScreenButton' />
      <RoundedButton text='Friend' onPress={() => navigation.navigate('Friend')} testID='friendEntityScreenButton' />
      <RoundedButton text='FollowUser' onPress={() => navigation.navigate('FollowUser')} testID='followUserEntityScreenButton' />
      <RoundedButton text='FollowGroup' onPress={() => navigation.navigate('FollowGroup')} testID='followGroupEntityScreenButton' />
      <RoundedButton text='FollowPage' onPress={() => navigation.navigate('FollowPage')} testID='followPageEntityScreenButton' />
      <RoundedButton text='FileInfo' onPress={() => navigation.navigate('FileInfo')} testID='fileInfoEntityScreenButton' />
...
      <RoundedButton text='PostLike' onPress={() => navigation.navigate('PostLike')} testID='postLikeEntityScreenButton' />
      <RoundedButton text='GroupProfile' onPress={() => navigation.navigate('GroupProfile')} testID='groupProfileEntityScreenButton' />
      <RoundedButton text='NewsFeed' onPress={() => navigation.navigate('NewsFeed')} testID='newsFeedEntityScreenButton' />
      <RoundedButton text='RankUser' onPress={() => navigation.navigate('RankUser')} testID='rankUserEntityScreenButton' />
      <RoundedButton text='RankGroup' onPress={() => navigation.navigate('RankGroup')} testID='rankGroupEntityScreenButton' />
      <RoundedButton text='Notification' onPress={() => navigation.navigate('Notification')} testID='notificationEntityScreenButton' />
      <RoundedButton text='Album' onPress={() => navigation.navigate('Album')} testID='albumEntityScreenButton' />
      <RoundedButton text='Video' onPress={() => navigation.navigate('Video')} testID='videoEntityScreenButton' />
      <RoundedButton text='Image' onPress={() => navigation.navigate('Image')} testID='imageEntityScreenButton' />
      <RoundedButton text='VideoStream' onPress={() => navigation.navigate('VideoStream')} testID='videoStreamEntityScreenButton' />
      <RoundedButton
        text='VideoLiveStreamBuffer'
        onPress={() => navigation.navigate('VideoLiveStreamBuffer')}
...
