...
      return;
    }
    setPage(page + 1);
    fetchAlbums();
  };
  return (
    <View style={styles.container} testID='albumScreen'>
      <FlatList
        contentContainerStyle={styles.listContent}
        data={albumList}
        renderItem={renderRow}
        keyExtractor={keyExtractor}
        initialNumToRender={oneScreensWorth}
...
